# Rust-neural

./: Cargo.toml  README.md
src/: adversarial.rs  lib.rs  main.rs  threaded.rs
